[package]
name = "nostd-test-contract"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = "fat"
# for small bitcode, do not set debug to true
# debug = true

[profile.dev]
panic = "abort"

[dependencies]
soroban-sdk = {version = "0.6.0", features = ["verification"]}

[patch.crates-io]
soroban-sdk = { path = "../rs-soroban-sdk/soroban-sdk" }
soroban-auth = { path = "../rs-soroban-sdk/soroban-auth" }
soroban-spec = { path = "../rs-soroban-sdk/soroban-spec" }
soroban-sdk-macros = { path = "../rs-soroban-sdk/soroban-sdk-macros" }

# rs-soroban-sdk finds rs-soroban-env at https://github.com/stellar/rs-soroban-env so we need to patch that, it seems:
[patch."https://github.com/stellar/rs-soroban-env"]
soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
# soroban-env-guest = { path = "../rs-soroban-env/soroban-env-guest" }
# we don't need the host because we are using the special no_std environment:
# soroban-env-host = { path = "../rs-soroban-env/soroban-env-host/" }

[build-dependencies]
cc = "1.0"
