[package]
name = "nostd-test-contract"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "z"

[dependencies]
soroban-sdk = {path = "../rs-soroban-sdk/soroban-sdk", features = ["verification"]}
seahorn-stubs = {path = "../seahorn-stubs/"}

# rs-soroban-sdk finds rs-soroban-env at https://github.com/stellar/rs-soroban-env so we need to patch that, it seems:
[patch."https://github.com/stellar/rs-soroban-env"]
soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
soroban-env-verification = { path = "../rs-soroban-env/soroban-env-verification" }
[patch."https://github.com/stellar/rs-stellar-xdr"]
stellar-xdr = { path = "../rs-stellar-xdr" }

[build-dependencies]
cc = "1.0"
