[package]
name = "nostd-test-contract"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "z"
# NOTE: without lto or with low opt-level we can get a linking error (missing rust_eh_personality) if the core lib has been built with unwinding.
# See https://github.com/rust-lang/rust/issues/106864#issuecomment-1385796971
# using -Z build-std=core,alloc,panic_abort seems to help

[profile.release-debug]
inherits = "release"
opt-level = 0
lto = true
debug = true

[dependencies]
soroban-sdk = {path = "../rs-soroban-sdk/soroban-sdk", features = ["verification"]}
seahorn-stubs = {path = "../seahorn-stubs/"}

# rs-soroban-sdk finds rs-soroban-env at https://github.com/stellar/rs-soroban-env so we need to patch that, it seems:
[patch."https://github.com/stellar/rs-soroban-env"]
soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
soroban-env-verification = { path = "../rs-soroban-env/soroban-env-verification" }
[patch."https://github.com/stellar/rs-stellar-xdr"]
stellar-xdr = { path = "../rs-stellar-xdr" }

[build-dependencies]
cc = "1.0"
